--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </div>
     <footer>
       <p class="font_2">Last update today @9:55am</p>
-      <a href="https://github.com/CristinaPH/My-weather-app">Open/source code</a> <span>by Cristina PH</span>
+      <a href="https://github.com/CristinaPH/My-weather-app" target="_blank" >Open-source code </a> <span>by Cristina PH</span>
     </footer>
   
 
